--- a/fearnopeer_is_the_best.css
+++ b/fearnopeer_is_the_best.css
@@ -1,4 +1,4 @@
-body > main > article > section.panelV2.blocks__random-media > div > div > a.media {
+body > main > article > section.panelV2.blocks__random-media > div > div > [class*="media"] {
   transition: transform .2s;
 }
 
