--- a/fearnopeer_is_the_best.css
+++ b/fearnopeer_is_the_best.css
@@ -1,4 +1,6 @@
-body > main > article > section.panelV2.blocks__random-media > div > div > [class*="media"] {
+body > main > article > section.panelV2.blocks__random-media > div > div > [class*="media"],
+body > main > article > section.panelV2.blocks__featured > div > ul > li > article > aside > a > figure > img,
+body > main > article > section.panelV2.blocks__top-torrents > div > table > tbody > tr > td.torrent-search--list__poster > a > img {
   transition: transform .2s;
 }
 
@@ -6,10 +8,8 @@ body > main > article > section.panelV2.blocks__random-media > div > div > [clas
   transform: scale(1.2);
 }
 
-body > main > article > section.panelV2.blocks__top-torrents > div > table > tbody > tr > td.torrent-search--list__poster > a > img {
-  transition: transform .2s;
-}
-
-body > main > article > section.panelV2.blocks__top-torrents > div > table > tbody > tr > td.torrent-search--list__poster > a > img:hover {
+body > main > article > section.panelV2.blocks__top-torrents > div > table > tbody > tr > td.torrent-search--list__poster > a > img:hover,
+body > main > article > section.panelV2.blocks__featured > div > ul > li > article > aside > a > figure > img:hover
+{
   transform: scale(1.5);
 }
