--- a/fearnopeer_is_the_best.css
+++ b/fearnopeer_is_the_best.css
@@ -6,10 +6,12 @@ body > main > article > section.panelV2.blocks__top-torrents > div > table > tbo
 
 body > main > article > section.panelV2.blocks__random-media > div > div > [class*="media"]:hover {
   transform: scale(1.2);
+  position: absolute;
 }
 
 body > main > article > section.panelV2.blocks__top-torrents > div > table > tbody > tr > td.torrent-search--list__poster > a > img:hover,
 body > main > article > section.panelV2.blocks__featured > div > ul > li > article > aside > a > figure > img:hover
 {
-  transform: scale(1.5);
+  transform: scale(2.0);
+  position: absolute;
 }
