--- a/fearnopeer_is_the_best.css
+++ b/fearnopeer_is_the_best.css
@@ -1,5 +1,5 @@
 body > main > article > section.panelV2.blocks__random-media > div > div > [class*="media"],
-body > main > article > section.panelV2.blocks__featured > div > ul > li > article > aside > a > figure > img,
+body > main > article > section.panelV2.blocks__featured > div > ul > li > article > aside,
 body > main > article > section.panelV2.blocks__top-torrents > div > table > tbody > tr > td.torrent-search--list__poster > a > img {
   transition: transform .2s;
 }
@@ -9,7 +9,7 @@ body > main > article > section.panelV2.blocks__random-media > div > div > [clas
 }
 
 body > main > article > section.panelV2.blocks__top-torrents > div > table > tbody > tr > td.torrent-search--list__poster > a > img:hover,
-body > main > article > section.panelV2.blocks__featured > div > ul > li > article > aside > a > figure > img:hover
+body > main > article > section.panelV2.blocks__featured > div > ul > li > article > aside:hover
 {
   transform: scale(2.5);
   position: absolute;
